# clipwise

./: .env.example  .gitignore  README.md  findings.md  package.json  pnpm-lock.yaml  progress.md  task_plan.md
apps/web/: next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/db/: client.ts  schema.ts  seed.ts
apps/web/e2e/: project-interactions.spec.ts  upload-to-project.spec.ts
apps/web/features/: project-mapping.ts
datasets/editor-recall-labels/: README.md  examples.jsonl
docs/: phase-1-verification.md  phase-2-verification.md  phase-3-verification.md  phase-4-verification.md  phase-5-verification.md  phase-6-verification.md
infra/: docker-compose.yml
outputs/: 直播回放智能切片工具_SPEC_v0.2.md
references/: README.md  clipwise-index-3.html  clipwise-project-5.html  直播回放智能切片工具_前端设计稿合集_v0.2.md
services/worker/: .env.example  README.md  pyproject.toml
services/worker/clipwise_worker/: asr.py  candidates.py  config.py  db.py  deepseek.py  highlight_models.py  highlight_pipeline.py  highlight_selection.py  highlight_windows.py  main.py  mock_ai.py  pipeline.py  tasks.py
services/worker/tests/: conftest.py  test_asr_groq.py  test_asr_merge.py  test_candidate_persistence.py  test_claim_task.py  test_db.py  test_deepseek_client.py  test_deepseek_contracts.py  test_highlight_pipeline.py  test_highlight_selection.py  test_highlight_windows.py  test_mock_ai.py  test_pipeline.py  test_pipeline_candidates.py  test_pipeline_cleanup.py  test_pipeline_transcribe.py  test_state_machine.py
(+112 files in other folders)
